--- a/coreUI/src/main/res/color/trackbar_state.xml
+++ b/coreUI/src/main/res/color/trackbar_state.xml
@@ -3,6 +3,6 @@
     <item android:state_enabled="false"
         android:color="@android:color/transparent"/> <!-- pressed -->
     <item android:state_enabled="true"
-        android:color="?attr/white"/>
+        android:color="?attr/light"/>
 
 </selector>
