--- a/coreUI/src/main/res/drawable/button_left.xml
+++ b/coreUI/src/main/res/drawable/button_left.xml
@@ -10,26 +10,28 @@
                     <corners
                         android:topLeftRadius="10dp"
                         android:bottomLeftRadius="10dp" />
-                    <padding
-                        android:left="0dp"
-                        android:top="1dp"
-                        android:right="0dp"
-                        android:bottom="0dp" />
-                    <solid
-                        android:color="?attr/light" />
+                    <gradient
+                        android:angle="90"
+                        android:startColor="?attr/shadow"
+                        android:endColor="?attr/light"
+                        android:type="linear" />
                 </shape>
             </item>
-            <item >
+            <item
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="2dp"
+                >
                 <shape android:shape="rectangle">
                     <corners
-                        android:topLeftRadius="10dp"
-                        android:bottomLeftRadius="10dp" />
+                        android:topLeftRadius="9dp"
+                        android:bottomLeftRadius="9dp" />
 
                     <gradient
                         android:angle="90"
-                        android:startColor="?attr/button_startColor"
-                        android:centerColor="?attr/button_centerColor"
-                        android:endColor="?attr/button_endColor"
+                        android:startColor="?attr/primary_endColor"
+                        android:endColor="?attr/primary_startColor"
                         android:type="linear" />
                 </shape>
             </item>
@@ -37,6 +39,7 @@
     </item>
     <item android:state_pressed="true">
         <layer-list>
+
             <item >
                 <shape
                     android:shape="rectangle">
@@ -45,16 +48,31 @@
                         android:bottomLeftRadius="10dp" />
                     <gradient
                         android:angle="90"
-                        android:startColor="?attr/button_startColor_pressed"
-                        android:centerColor="?attr/button_centerColor_pressed"
-                        android:endColor="?attr/button_endColor_pressed"
+                        android:startColor="?attr/shadow"
+                        android:endColor="?attr/light"
                         android:type="linear" />
                 </shape>
             </item>
+            <item
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="2dp"
+                >
+                <shape android:shape="rectangle">
+                    <corners
+                        android:topLeftRadius="10dp"
+                        android:bottomLeftRadius="10dp" />
 
+                    <gradient
+                        android:angle="90"
+                        android:startColor="?attr/primary_startColor"
+                        android:endColor="?attr/primary_endColor"
+                        android:type="linear" />
+                </shape>
+            </item>
         </layer-list>
 
     </item>
 
 </selector>
-
