--- a/coreUI/src/main/res/values/themes.xml
+++ b/coreUI/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.MusicPlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
        <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splash</item>
-        <item name="branded_color">@color/branded_color</item>
+        <item name="surface">@color/branded_color</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
@@ -13,8 +13,9 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/branded_color</item>
 
-        <item name="tint">@color/tint</item>
-        <item name="branded_color">@color/branded_color</item>
+        <item name="on_primary_activated">@color/branded_tint</item>
+        <item name="on_primary">@color/branded_tint</item>
+        <item name="primary">@color/branded_color</item>
         <item name="branded_light">@color/branded_light</item>
         <item name="branded_dark">@color/branded_dark</item>
         <item name="text_gray">@color/text_gray</item>
@@ -23,49 +24,73 @@
         <item name="shadow">@color/shadow</item>
         <item name="gray">@color/gray</item>
         <item name="light">@color/light</item>
-        <item name="black">@color/black</item>
-        <item name="white">@color/white</item>
+
 
         <item name="green">@color/green</item>
         <item name="red">@color/red</item>
 
-        <item name="button_startColor">@color/button_startColor</item>
-        <item name="button_centerColor">@color/button_centerColor</item>
-        <item name="button_endColor">@color/button_endColor</item>
+        <item name="primary_startColor">@color/button_startColor</item>
+        <item name="primary_centerColor">@color/button_centerColor</item>
+        <item name="primary_endColor">@color/button_endColor</item>
         <item name="button_startColor_pressed">@color/button_startColor_pressed</item>
         <item name="button_centerColor_pressed">@color/button_centerColor_pressed</item>
         <item name="button_endColor_pressed">@color/button_endColor_pressed</item>
 
         <item name="launcher_background" >@color/branded_color</item>
+
+        <item name="tertiary_startColor">@color/blue_27</item>
+        <item name="tertiary_centerColor">@color/white_10</item>
+        <item name="tertiary_endColor">@color/blue_19</item>
+        <item name="on_tertiary_startColor">@color/white_10</item>
+        <item name="on_tertiary_centerColor">@color/white_10</item>
+        <item name="on_tertiary_endColor">@color/white_10</item>
+
+        <item name="surface">@color/blue_19</item>
+        <item name="tertiary">@color/blue_19</item>
+        <item name="on_tertiary">@color/white_50</item>
     </style>
     <style name="Theme.YESActivityLight" parent="Theme.MusicPlayer">
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@color/branded_color</item>
+        <item name="android:windowBackground">@color/white_100</item>
 
-        <item name="tint">@color/red</item>
-        <item name="branded_color">@color/red</item>
-        <item name="branded_light">@color/red</item>
-        <item name="branded_dark">@color/red</item>
-        <item name="text_gray">@color/red</item>
-        <item name="transparent">@color/red</item>
+        <item name="on_primary_activated">@color/white_0</item>
+        <item name="on_primary">@color/white_15</item>
+        <item name="primary">@color/white_75</item>
+        <item name="branded_light">@color/branded_25</item>
+        <item name="branded_dark">@color/branded_15</item>
+        <item name="text_gray">@color/green</item>
+        <item name="transparent">@color/transparent</item>
 
-        <item name="shadow">@color/red</item>
-        <item name="gray">@color/red</item>
-        <item name="light">@color/red</item>
-        <item name="black">@color/red</item>
-        <item name="white">@color/red</item>
 
-        <item name="green">@color/red</item>
+
+        <item name="green">@color/green</item>
         <item name="red">@color/red</item>
 
-        <item name="button_startColor">@color/red</item>
-        <item name="button_centerColor">@color/red</item>
-        <item name="button_endColor">@color/red</item>
+
         <item name="button_startColor_pressed">@color/red</item>
         <item name="button_centerColor_pressed">@color/red</item>
         <item name="button_endColor_pressed">@color/red</item>
 
         <item name="launcher_background" >@color/red</item>
+
+        <item name="primary_startColor">@color/white_85</item>
+        <item name="primary_centerColor">@color/white_55</item>
+        <item name="primary_endColor">@color/white_40</item>
+
+        <item name="tertiary_startColor">@color/white_10</item>
+        <item name="tertiary_centerColor">@color/white_20</item>
+        <item name="tertiary_endColor">@color/white_40</item>
+        <item name="on_tertiary_startColor">@color/white_5</item>
+        <item name="on_tertiary_centerColor">@color/white_15</item>
+        <item name="on_tertiary_endColor">@color/white_25</item>
+
+        <item name="light">@color/white_100</item>
+        <item name="gray">@color/white_35</item>
+        <item name="shadow">@color/white_0</item>
+
+        <item name="surface">@color/white_85</item>
+        <item name="tertiary">@color/white_50</item>
+        <item name="on_tertiary">@color/white_50</item>
     </style>
 </resources>
