--- a/coreUI/src/main/res/color/checkable_color.xml
+++ b/coreUI/src/main/res/color/checkable_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:color="?attr/tint"/>
+        android:color="?attr/on_primary"/>
     <item android:state_checked="false"
         android:color="?attr/branded_light"/>
 </selector>
