--- a/coreUI/src/main/res/color/pressable_color.xml
+++ b/coreUI/src/main/res/color/pressable_color.xml
@@ -3,5 +3,5 @@
     <item android:state_pressed="true"
         android:color="?attr/branded_light"/>
     <item android:state_pressed="false"
-        android:color="?attr/tint"/>
+        android:color="?attr/on_primary"/>
 </selector>
