--- a/coreUI/src/main/res/color/tint_pressed_state_list.xml
+++ b/coreUI/src/main/res/color/tint_pressed_state_list.xml
@@ -5,7 +5,7 @@
     <item android:state_checked="true"
         android:color="?attr/branded_light"/>
     <item android:state_focused="true"
-        android:color="?attr/tint"/>
+        android:color="?attr/on_primary"/>
     <item
-        android:color="?attr/tint"/>
+        android:color="?attr/on_primary"/>
 </selector>
