--- a/coreUI/src/main/res/drawable/background.xml
+++ b/coreUI/src/main/res/drawable/background.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-
     <item
         android:bottom="2dp">
         <shape
             android:shape="rectangle">
             <solid android:color="?attr/light" />
-
         </shape>
     </item>
-
     <item
         android:top="2dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="?attr/black" />
-
+            <solid android:color="?attr/shadow" />
         </shape>
     </item>
     <item
@@ -25,15 +20,13 @@
         android:bottom="2dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="?attr/branded_color" />
+            <solid android:color="?attr/surface" />
 
         </shape>
     </item>
     <item >
-
         <shape
             android:shape="rectangle">
-
             <stroke
                 android:width="2dp"
                 android:color="@color/selectable_color"
