--- a/coreUI/src/main/res/drawable/border_left.xml
+++ b/coreUI/src/main/res/drawable/border_left.xml
@@ -6,7 +6,8 @@
         android:bottom="-2dp">
         <shape
             android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#000000" />
+            <stroke android:width="1dp"
+                android:color="#000000" />
         </shape>
     </item>
 </layer-list>
