--- a/coreUI/src/main/res/drawable/button_center.xml
+++ b/coreUI/src/main/res/drawable/button_center.xml
@@ -7,22 +7,27 @@
             <item >
                 <shape
                     android:shape="rectangle">
-                    <padding
-                        android:left="0dp"
-                        android:top="1dp"
-                        android:right="0dp"
-                        android:bottom="0dp" />
-                    <solid
-                        android:color="?attr/light" />
-                </shape>
-            </item>
-            <item >
-                <shape android:shape="rectangle">
+
                     <gradient
                         android:angle="90"
-                        android:startColor="?attr/button_startColor"
-                        android:centerColor="?attr/button_centerColor"
-                        android:endColor="?attr/button_endColor"
+                        android:startColor="?attr/shadow"
+                        android:endColor="?attr/light"
+                        android:type="linear" />
+                </shape>
+            </item>
+            <item
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="2dp"
+                >
+                <shape android:shape="rectangle">
+
+
+                    <gradient
+                        android:angle="90"
+                        android:startColor="?attr/primary_endColor"
+                        android:endColor="?attr/primary_startColor"
                         android:type="linear" />
                 </shape>
             </item>
@@ -30,18 +35,33 @@
     </item>
     <item android:state_pressed="true">
         <layer-list>
+
             <item >
                 <shape
                     android:shape="rectangle">
                     <gradient
                         android:angle="90"
-                        android:startColor="?attr/button_startColor_pressed"
-                        android:centerColor="?attr/button_centerColor_pressed"
-                        android:endColor="?attr/button_endColor_pressed"
+                        android:startColor="?attr/shadow"
+                        android:endColor="?attr/light"
                         android:type="linear" />
                 </shape>
             </item>
+            <item
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="2dp"
+                >
+                <shape android:shape="rectangle">
 
+
+                    <gradient
+                        android:angle="90"
+                        android:startColor="?attr/primary_startColor"
+                        android:endColor="?attr/primary_endColor"
+                        android:type="linear" />
+                </shape>
+            </item>
         </layer-list>
 
     </item>
