--- a/coreUI/src/main/res/drawable/display.xml
+++ b/coreUI/src/main/res/drawable/display.xml
@@ -31,7 +31,7 @@
                 android:radius="10dp" />
             <stroke
                 android:width="3dp"
-                android:color="?attr/black" />
+                android:color="?attr/shadow" />
         </shape>
     </item>
     <item>
@@ -64,7 +64,7 @@
                 <corners
                 android:radius="10dp" />
                 <solid
-                    android:color="#111111" />
+                    android:color="?attr/primary" />
 
 
         </shape>
@@ -79,7 +79,7 @@
                 android:radius="0dp" />
             <stroke
                 android:width="2dp"
-                android:color="?attr/black" />
+                android:color="?attr/shadow" />
             <gradient
                 android:angle="90"
                 android:startColor="#888d86"
