--- a/coreUI/src/main/res/drawable/panel_flat.xml
+++ b/coreUI/src/main/res/drawable/panel_flat.xml
@@ -7,54 +7,27 @@
                 android:radius="5dp" />
             <solid
                 android:color="?attr/light" />
-            <padding
-                android:left="0dp"
-                android:top="1dp"
-                android:right="0dp"
-                android:bottom="1dp" />
         </shape>
     </item>
-    <item>
+    <item
+        android:left="0dp"
+        android:top="1dp"
+        android:right="0dp"
+        android:bottom="2dp"
+        >
         <shape
             android:shape="rectangle">
             <corners
                 android:radius="5dp" />
-            <padding
-                android:left="2dp"
-                android:top="2dp"
-                android:right="2dp"
-                android:bottom="0dp" />
+            <stroke
+                android:width="2dp"
+                android:color="?attr/shadow"
+                 />
+
                 <solid
-                    android:color="?attr/black" />
+                    android:color="?attr/tertiary" />
         </shape>
     </item>
 
-    <item>
-        <shape
-            android:shape="rectangle">
-            <corners
-                android:radius="3dp" />
-            <padding
-                android:left="0dp"
-                android:top="0dp"
-                android:right="0dp"
-                android:bottom="2dp" />
-            <solid
-                android:color="?attr/black" />
-        </shape>
-    </item>
-    <item>
-        <shape
-            android:shape="rectangle">
-            <corners
-                android:radius="3dp" />
-            <padding
-                android:left="0dp"
-                android:top="0dp"
-                android:right="0dp"
-                android:bottom="0dp" />
-            <solid
-                android:color="?attr/branded_color" />
-        </shape>
-    </item>
+
 </layer-list>
