--- a/coreUI/src/main/res/drawable/thumb.xml
+++ b/coreUI/src/main/res/drawable/thumb.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        <shape
             android:shape="oval">
             <padding
                 android:left="5dp"
@@ -11,9 +11,9 @@
                 android:bottom="5dp" />
             <gradient
                 android:angle="270"
-                android:startColor="?attr/branded_light"
-                android:centerColor="?attr/branded_color"
-                android:endColor="?attr/branded_dark"
+                android:startColor= "?attr/primary_startColor"
+                android:centerColor="?attr/primary_centerColor"
+                android:endColor="?attr/primary_endColor"
                 android:type="linear"
                 android:useLevel="false"  />
             <stroke android:width="1dp" android:color="@android:color/black" />
@@ -23,16 +23,18 @@
         </shape>
     </item>
     <item >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        <shape
             android:shape="oval">
             <gradient
                 android:angle="270"
-                android:startColor= "?attr/branded_color"
-                android:centerColor="#484848"
-                android:endColor="#5d5d5d"
+                android:startColor= "?attr/primary_endColor"
+                android:centerColor="?attr/primary_centerColor"
+                android:endColor="?attr/primary_startColor"
                 android:type="linear"
                 android:useLevel="false"  />
-            <stroke android:width="1dp" android:color="#242424" />
+            <stroke
+                android:width="1dp"
+                android:color="?attr/shadow" />
             <size
                 android:width="15dp"
                 android:height="15dp"/>
