--- a/coreUI/src/main/res/layout/dialog.xml
+++ b/coreUI/src/main/res/layout/dialog.xml
@@ -26,7 +26,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:textColor="?attr/black"
+            android:textColor="?attr/shadow"
             android:textSize="@dimen/font_size_large"
             tools:text="hello" />
     </FrameLayout>
@@ -54,7 +54,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
-            android:indeterminateTint="?attr/tint"
+            android:indeterminateTint="?attr/on_primary"
             android:visibility="gone" />
 
         <View
