--- a/coreUI/src/main/res/layout/notification.xml
+++ b/coreUI/src/main/res/layout/notification.xml
@@ -60,7 +60,7 @@
             android:layout_marginBottom="3dp"
             android:layout_weight="1"
             android:background="@drawable/button_left"
-            android:tint="?attr/tint" />
+            android:tint="?attr/on_primary" />
 
         <ImageButton
             android:id="@+id/play_button"
@@ -72,7 +72,7 @@
             android:layout_marginBottom="3dp"
             android:layout_weight="1"
             android:background="@drawable/button_center"
-            android:tint="?attr/tint" />
+            android:tint="?attr/on_primary" />
 
         <ImageButton
             android:id="@+id/fwd_button"
@@ -83,7 +83,7 @@
             android:layout_marginBottom="3dp"
             android:layout_weight="1"
             android:background="@drawable/button_right"
-            android:tint="?attr/tint" />
+            android:tint="?attr/on_primary" />
     </LinearLayout>
 
 </LinearLayout>
