--- a/coreUI/src/main/res/values/styles.xml
+++ b/coreUI/src/main/res/values/styles.xml
@@ -44,6 +44,12 @@
         <item name="colorControlNormal">#ffa800</item>
         <item name="colorControlActivated">#ffa800</item>
     </style>
+    <style name="container">
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+    </style>
     <style name="margin">
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginTop">4dp</item>
@@ -56,10 +62,11 @@
         <item name="android:background">@drawable/display</item>
     </style>
     <style name="buttonStyle">
+        <item name="android:tint">?attr/on_primary</item>
         <item name="android:layout_marginTop">1dp</item>
-        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="tint">@color/pressable_color</item>
+        <item name="on_primary">@color/pressable_color</item>
         <item name="android:layout_width">match_parent</item>
     </style>
     <style name="buttonStyleTall" parent="buttonStyle">
@@ -69,12 +76,10 @@
         <item name="android:layout_height">@dimen/button_height_small</item>
     </style>
     <style name="buttonLeftLow" parent="buttonStyleLow">
-        <item name="android:layout_marginLeft">2dp</item>
-        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:layout_marginLeft">1dp</item>
     </style>
     <style name="buttonRightLow" parent="buttonStyleLow">
-        <item name="android:layout_marginLeft">1dp</item>
-        <item name="android:layout_marginRight">2dp</item>
+        <item name="android:layout_marginRight">1dp</item>
     </style>
     <style name="buttonSingleLow" parent="buttonStyleLow">
         <item name="android:background">@drawable/button_single</item>
@@ -103,7 +108,7 @@
         <item name="android:scrollHorizontally">true</item>
         <item name="android:singleLine">true</item>
         <item name="android:textColor">@color/activatable_color</item>
-        <item name="android:textStyle">bold</item>
+
     </style>
     <style name="textInListLarge">
         <item name="android:layout_width">match_parent</item>
@@ -114,7 +119,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:singleLine">true</item>
         <item name="android:textColor">@color/activatable_color</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="TrailingIcon">
@@ -123,7 +128,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
-        <item name="android:buttonTint">?attr/tint</item>
+        <item name="android:buttonTint">?attr/on_primary</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:focusableInTouchMode">false</item>
