--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -33,10 +33,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/black"
+                    android:background="?attr/shadow"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/playList"
-                    android:textColor="?attr/white"
+                    android:textColor="?attr/light"
                     android:textSize="@dimen/font_size_regular" />
 
                 <TextView
@@ -52,18 +52,18 @@
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
 
-                    android:textColor="?attr/black"
+                    android:textColor="?attr/shadow"
                     android:textSize="@dimen/font_size_large"
                     tools:text="hello" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/black"
+                    android:background="?attr/shadow"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/song"
 
-                    android:textColor="?attr/white"
+                    android:textColor="?attr/light"
                     android:textSize="@dimen/font_size_regular"
                     app:autoSizeTextType="uniform" />
 
@@ -83,7 +83,7 @@
                     android:gravity="center_vertical"
 
 
-                    android:textColor="?attr/black"
+                    android:textColor="?attr/shadow"
                     android:textSize="@dimen/font_size_large"
                     tools:text="привет" />
 
@@ -103,11 +103,11 @@
             android:layout_height="wrap_content"
 
 
-            android:background="?attr/black"
+            android:background="?attr/shadow"
             android:gravity="center_horizontal|center_vertical"
 
             android:text="@string/duration"
-            android:textColor="?attr/white"
+            android:textColor="?attr/light"
             android:textSize="14sp" />
 
         <LinearLayout
@@ -132,7 +132,7 @@
                 android:maxLines="1"
 
                 android:text="00:00"
-                android:textColor="?attr/black"
+                android:textColor="?attr/shadow"
                 android:textSize="@dimen/font_size_coloss"
                 tools:text="BUFFERING..." />
 
@@ -158,7 +158,7 @@
                 android:fontFamily="@font/a_lcdnova_allfont_ru"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="00:00"
-                android:textColor="?attr/black"
+                android:textColor="?attr/shadow"
                 android:textSize="@dimen/font_size_coloss" />
         </LinearLayout>
     </LinearLayout>
