--- a/playlistFeature/src/main/res/layout/item_track.xml
+++ b/playlistFeature/src/main/res/layout/item_track.xml
@@ -31,7 +31,7 @@
 
         <TextView
             android:id="@+id/playlist_title"
-            style="@style/textInListSmall"
+            style="@style/textInListLarge"
             android:layout_weight="1"
             tools:text="Song title" />
 
