--- a/alarmClockFeature/src/main/res/layout/alarms_list_screen.xml
+++ b/alarmClockFeature/src/main/res/layout/alarms_list_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/padding"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,13 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/display">
+        android:background="@drawable/display"
+        android:padding="11dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/alarmsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/tertiary" />
+            android:background="?attr/tertiary"
+            tools:listitem="@layout/item_alarmlist" />
     </FrameLayout>
 
     <FrameLayout
