--- a/alarmClockFeature/src/main/res/layout/item_alarmlist.xml
+++ b/alarmClockFeature/src/main/res/layout/item_alarmlist.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/padding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background"
@@ -26,16 +27,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:textStyle="bold"
-        android:padding="@dimen/padding_small">
+        android:padding="@dimen/padding_small"
+        android:textStyle="bold">
 
         <TextView
-            android:textSize="16sp"
             android:id="@+id/alarm_time_left"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textColor="?attr/on_primary" />
+            android:textColor="?attr/on_primary"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/alarm_repeat_days"
