--- a/coreUI/src/main/res/drawable/panel_flat.xml
+++ b/coreUI/src/main/res/drawable/panel_flat.xml
@@ -11,7 +11,7 @@
     </item>
     <item
         android:left="0dp"
-        android:top="1dp"
+        android:top="2dp"
         android:right="0dp"
         android:bottom="2dp"
         >
@@ -25,7 +25,7 @@
                  />
 
                 <solid
-                    android:color="?attr/tertiary" />
+                    android:color="?attr/primary" />
         </shape>
     </item>
 
