--- a/playlistFeature/src/main/res/layout/playlist.xml
+++ b/playlistFeature/src/main/res/layout/playlist.xml
@@ -19,8 +19,8 @@
             android:id="@+id/playList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:background="?attr/tertiary"
+            android:visibility="visible"
             tools:itemCount="10"
             tools:listitem="@layout/item_track" />
 
