refactor:light theme in progress 24.05.2023

--- a/coreUI/src/main/res/drawable-v21/splash.xml
+++ b/coreUI/src/main/res/drawable-v21/splash.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
 
-            <solid android:color="?attr/surface" />
+            <solid android:color="#353539" />
         </shape>
     </item>
     <item
