--- a/coreUI/src/main/res/drawable/background.xml
+++ b/coreUI/src/main/res/drawable/background.xml
@@ -20,7 +20,7 @@
         android:bottom="2dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="?attr/on_primary_activated" />
+            <solid android:color="?attr/primary" />
 
         </shape>
     </item>
