--- a/coreUI/src/main/res/values/colors.xml
+++ b/coreUI/src/main/res/values/colors.xml
@@ -30,7 +30,7 @@
 
     <color name="blue_50">#0099ff</color>
     <color name="green">#4CAF50</color>
-    <color name="red">#FF00ff</color>
+    <color name="red">#ff0000</color>
 
     <color name="button_startColor">#353539</color>
     <color name="button_centerColor">#1c1c22</color>
