--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -93,6 +93,7 @@
                 android:id="@+id/visualizerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
                 android:layout_weight="2"
                 android:visibility="visible" />
 
