--- a/trackdialogFeature/src/main/res/layout/track_dialog.xml
+++ b/trackdialogFeature/src/main/res/layout/track_dialog.xml
@@ -40,10 +40,9 @@
                 <CheckBox
                     android:id="@+id/network_btn"
                     style="@style/buttonSingleLow"
-                    android:buttonTint="@color/checkable_color"
                     android:button="@drawable/wan"
-                    android:checked="true"
-                     />
+                    android:buttonTint="@color/checkable_color"
+                    android:checked="true" />
 
             </FrameLayout>
 
